<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:background="#92662D"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/title_init_step5"
            android:layout_gravity="center_vertical" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/loadingPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="5sp"
                android:text="@string/prompt_welcome"
                android:gravity="center" />

            <Button
                android:id="@+id/btn_confirm"
                android:text="@string/prompt_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>