<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:background="#92662D"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/title_init_step1"
            android:layout_gravity="center_vertical" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_init_id"
                    android:focusable="false"
                    android:gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:singleLine="true"
                    android:id="@+id/jaedan_id" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_init_pw"
                    android:gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:id="@+id/jaedan_pw" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:text="@string/prompt_init_login"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp" />

    </LinearLayout>

</LinearLayout>